# cuddly-potato

./: .gitignore  CMakeLists.txt  README.md
src/: argo.cpp  argo.h  exception.h  file_type.cpp  file_type.h  filetype.h  main.cpp  research.cpp  research.h  scan.cpp  scan.h  task.cpp  task.h
src/research/: github_research.h  local_research.h  remote_research.h
